# dooers-workers

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: MIGRATION_v0.7.0.md
docs/plans/: 2026-02-05-analytics-settings-design.md  2026-02-10-sdk-improvements-design.md  2026-02-12-dispatch-entry-points-design.md  2026-02-13-worker-incoming-refactor-design.md  2026-02-13-worker-incoming-refactor-impl.md
examples/: fastapi_anthropic.py  fastapi_basic.py  fastapi_langchain.py  fastapi_langgraph.py  fastapi_multiple_endpoints.py  fastapi_openai.py  fastapi_openai_agents.py  fastapi_tools.py  fastapi_vertex.py  fastapi_whatsapp_webhook.py
scripts/: pcu.py
src/dooers/: __init__.py  broadcast.py  config.py  dispatch.py  exceptions.py  registry.py  repository.py  server.py  settings.py
src/dooers/features/analytics/: __init__.py  collector.py  models.py  worker_analytics.py
src/dooers/features/settings/: __init__.py  broadcaster.py  models.py  worker_settings.py
src/dooers/handlers/: __init__.py  context.py  incoming.py  memory.py  on.py  pipeline.py  request.py  response.py  router.py  send.py
src/dooers/migrations/: __init__.py  schemas.py
src/dooers/persistence/: __init__.py  base.py  cosmos.py  postgres.py  sqlite.py
src/dooers/protocol/: __init__.py  frames.py  models.py  parser.py
